--- a/app/globals.css
+++ b/app/globals.css
@@ -67,24 +67,30 @@ body::-webkit-scrollbar-thumb {
   /* Other styles */
 }
 
-@media screen and (max-width: 790px) {
-  .navMenu {
+@media screen and (max-width:430px) {
+  /* .navMenu {
     position: fixed;
-    top: -110%;
-    /* height: 50vh; */
-    width: 100%;
+    top:-42%;
+    right: -130%;
+    height: 100vh;
+    width: 115%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    padding: 1.5rem 1.5rem;
-    gap: 20px;
-    background-color: #f8f5ff;
+    background: #000;
+    
     z-index: 20;
     text-align: center;
-    box-shadow: 2px 5px 5px rgb(170, 164, 164);
-  }
-
+  } */
+ .navMenu{
+  background: black;
+  height: 100vh;
+  position: fixed;
+  width: 100%;
+  top: 0%;
+  right: -100%;
+ }
   .active .hamburger-bar.top {
     transform: translateY(8px) rotate(45deg);
   }
@@ -97,8 +103,48 @@ body::-webkit-scrollbar-thumb {
     transform: translateY(-8px) rotate(-45deg);
   }
 
-  .hamburger.active {
-    z-index: 30;
-  }
+  /* .hamburger.active {
+    position: absolute;
+    top: 2%;
+    right: 10%;
+    z-index: 70;
+  } */
 }
+
+.hamburger {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+  justify-content: center;
+  border-radius: 4000px;
+  gap: 5px;
+  width: 60px;
+  height: 44px;
+  padding: 10px 18px;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.hamburger-bar {
+  width: 100%;
+  height: 2px;
+  background: #FFFFFF;
+  transition: transform 0.3s ease;
+}
+.navMenu.active {
+  position: fixed;
+  /* top: -48%; */
+  right: 0%;
+  z-index: 70;
+}
+.barbar.active{
+  position: fixed;
+  z-index: 90;
+  width: 90%;
+}
+
+.navMenu Link{
+  border-bottom: #04492E;
+}
+
   
